Login form finished,better shop grid,new home page

--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Asimovian&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 
     <!-- TITLE -->
-    <title>Shadoria's Delights - Your Account</title>
+    <title>Shadoria's Delights - About us</title>
 </head>
 <body class="light-theme">
     <!-- BANNER -->
@@ -48,11 +48,6 @@
     </nav>
 
     <div id="body">
-        <div class="connect" id="connection">
-            <h2></h2>
-            <form>
-            </form>
-        </div>
     </div>
 
     <!-- FOOTER -->
@@ -139,6 +134,6 @@
             </ul>
         </div>
     </footer>
-    <script src="assets/js/login.js"></script>
+
 </body>
 </html>
