--- a/store.html
+++ b/store.html
@@ -21,7 +21,7 @@
     <nav>
         <ul id="nav-categories"> <!-- Products Catergories -->
             <li><a href="store.html"><strong>Store</strong></a></li>
-            <li><a href=""><strong>About Us</strong></a></li>
+            <li><a href="about-us.html"><strong>About Us</strong></a></li>
             <li><a href=""><strong>Join Us</strong></a></li>
         </ul>
         <h2><a href="index.html">Shadoria's Delights</a></h2> <!-- LOGO -->
